@@ -1,3 +1,7 @@
+2011-05-22  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/frames.jl: fixed setting frame-font colors for
+	states inactive-highlighted and inactive-clicked
+
 2011-05-14  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* src/frames.c
 	* src/sawfish_subrs.h
